<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot320pi_urdf</name>
  <version>0.1.0</version>
  <description>Fixed URDF + meshes for MyCobot 320 Pi (2022)</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
